fix(product): images slider on mobile view

--- a/app/blocks/product/product.styl
+++ b/app/blocks/product/product.styl
@@ -2,17 +2,52 @@
 	padding-top 80px
 	display block
 
-	&__image
+	&__images
 		display block
-		height 760px
-		background-position center
+		position relative
+		height 320px
+		
+	&__image
+		position absolute
+		width 50%
 		background-size cover
-
-		+below($tablet)
-			height 456px
-
+		background-position center
+		
+		&_left
+			left 0
+			top 0
+			height 100%
+			
+		&_left-top,
+		&_left-bottom
+			left 0
+			top 0
+			height 100%
+			height 50%
+				
+		&_left-bottom
+			top auto
+			bottom 0
+			
+		&_right
+			right 0
+			top 0
+			height 100%
+			
+		&_right-top,
+		&_right-bottom
+			right 0
+			top 0
+			height 50%
+				
+		&_right-bottom
+			top auto
+			bottom 0
+			
 		+below($mobile)
-			height 214px
+			position static
+			width auto
+			height 300px
 
 	&__items
 		& .product-item
