--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -5,6 +5,7 @@ import('helpers/svg-size')
 @import 'helpers/fonts'
 @import 'helpers/optimize'
 
+@import '../../node_modules/slick-carousel/slick/slick.css'
 import('../blocks/**/*')
 
 body
@@ -19,3 +20,38 @@ body
 .desktop-only
 	+below($tablet)
 		display none
+		
+.only-mobile
+	display none
+	+below($mobile)
+		display block
+		
+.only-tablet
+	display none
+	+below($tablet)
+		display block
+	+below($mobile)
+		display none
+		
+.only-desktop
+	display block
+	+below($tablet)
+		display none
+		
+.slick-dots
+	text-align center
+	li
+		display inline-block
+		
+		button
+			width 8px
+			height 8px
+			font-size 0
+			border-radius 100%
+			border none
+			background #9ac9ff
+			margin 4px
+			
+		&.slick-active
+			button
+				background #7e9fc0
